[gd_scene load_steps=11 format=3 uid="uid://bu88hafckixda"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_pr6eu"]
[ext_resource type="PackedScene" uid="uid://bqhsc8hea8wrj" path="res://scenes/menu/menu_bg_a.tscn" id="2_bxwit"]
[ext_resource type="PackedScene" uid="uid://c5s2l5s0xqg3d" path="res://scenes/menu/menu_bg_b.tscn" id="3_kpybm"]
[ext_resource type="PackedScene" uid="uid://cpv70flugg6sv" path="res://scenes/menu/menu_mask.tscn" id="4_ll38g"]
[ext_resource type="Shader" path="res://shaders/game_display.gdshader" id="5_bdxt2"]
[ext_resource type="Script" path="res://scenes/menu/Title.gd" id="6_16m6d"]
[ext_resource type="FontFile" uid="uid://c3a6jxnai6qpy" path="res://assets/MinimalPixel v2.ttf" id="6_g3ch5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2lpgi"]
resource_local_to_scene = true
shader = ExtResource("5_bdxt2")

[sub_resource type="LabelSettings" id="LabelSettings_8h6o3"]
font = ExtResource("6_g3ch5")
font_size = 69
font_color = Color(0.760784, 0.827451, 1, 1)
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 14
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_g6365"]
default_font = ExtResource("6_g3ch5")
default_font_size = 0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pr6eu")

[node name="Viewport1" type="SubViewport" parent="."]
canvas_item_default_texture_filter = 0
size = Vector2i(1280, 720)

[node name="MenuBgA" parent="Viewport1" instance=ExtResource("2_bxwit")]

[node name="Viewport2" type="SubViewport" parent="."]
canvas_item_default_texture_filter = 0
size = Vector2i(1280, 720)

[node name="MenuBgB" parent="Viewport2" instance=ExtResource("3_kpybm")]

[node name="Viewport3" type="SubViewport" parent="."]
canvas_item_default_texture_filter = 0
size = Vector2i(1280, 720)

[node name="MenuMask" parent="Viewport3" instance=ExtResource("4_ll38g")]

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2lpgi")
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Title" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 96.0
offset_right = 944.0
offset_bottom = 160.0
color = Color(0.709804, 0.682353, 0.956863, 1)
script = ExtResource("6_16m6d")

[node name="Label" type="Label" parent="Title"]
layout_mode = 0
offset_right = 648.0
offset_bottom = 69.0
text = "PROJECT ARKDUO"
label_settings = SubResource("LabelSettings_8h6o3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 232.0
offset_right = 880.0
offset_bottom = 392.0
pivot_offset = Vector2(240, 80)
theme = SubResource("Theme_g6365")
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="BlackFade" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
